@@ -10,6 +10,11 @@ Version 1.16-23 (opened August 11, 2009)
 
 	* specaccum, specpool, specpool2vect and friends: index names are
 	now all lower-case.
+
+	* estaccum: new function similar to 'poolaccum', but uses
+	'estimateR' for individual (count) based estimates of extrapolated
+	richness. Inherits from 'poolaccum', but only 'print' works
+	recently. Still undocumented.
 	
 Version 1.16-22 (closed August 11, 2009)
 
